manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: davin-sovann0415-testing-mydemo-service
spec:
  type: NodePort
  selector:
    app: davin-sovann0415-testing-mydemo
  ports:
    - protocol: TCP
      port: 8179
      targetPort: 3000
